--- a/generators/templates/Component.tsx.hbs
+++ b/generators/templates/Component.tsx.hbs
@@ -1,13 +1,14 @@
-import { Flex, Heading } from '@chakra-ui/react';
+import { Heading } from '@chakra-ui/react';
 import { FC} from 'react';
+import BaseContainer from 'components/BaseContainer';
 
 type {{pascalCase name}}Props = {};
 
 const {{pascalCase name}}: FC<{{pascalCase name}}Props> = () => {
     return (
-      <Flex>
+      <BaseContainer>
         <Heading>{{pascalCase name}}</Heading>
-      </Flex>
+      </BaseContainer>
     )
 };
 
