--- a/generators/templates/Page.tsx.hbs
+++ b/generators/templates/Page.tsx.hbs
@@ -1,11 +1,11 @@
-import { Flex, Text } from '@chakra-ui/react';
+import { Text } from '@chakra-ui/react';
 import { NextPage } from 'next';
 
 const {{pascalCase name}}: NextPage = () => {
     return (
-      <Flex>
+      <>
         <Text>{{pascalCase name}} Page</Text>
-      </Flex>
+      </>
     )
 };
 
