--- a/generators/templates/Page.tsx.hbs
+++ b/generators/templates/Page.tsx.hbs
@@ -1,12 +1,12 @@
 import { Text } from '@chakra-ui/react';
-import { NextPage } from 'next';
+import type { NextPage } from 'next';
 
-const {{pascalCase name}}: NextPage = () => {
-    return (
-      <>
-        <Text>{{pascalCase name}} Page</Text>
-      </>
-    )
+const {{pascalCase name}}Page: NextPage = () => {
+return (
+<>
+  <Text>{{pascalCase name}} Page</Text>
+</>
+)
 };
 
-export default {{pascalCase name}};
+export default {{pascalCase name}}Page;
